@startuml C4_Code
skinparam classAttributeIconSize 0


class MainPage {
    +OnPickWavClicked()
    +OnPlayClicked()
    +OnPauseClicked()
    +OnStopClicked()
    +OnPaintSurface()
}

class WaveformRenderer {
    +Draw(canvas, samples, width, height)
}

interface IAudioPlayer {
    +Play(path)
    +Pause()
    +Stop()
}

class MacAudioPlayer {
    +Play(path)
    +Pause()
    +Stop()
}

class WavFileReader {
    +ReadSamples(path): IEnumerable<float>
}

class AudioSampleBuffer {
    -float[] _buffer
    -int _index
    +Add(sample)
    +Snapshot(): float[]
}

MainPage --> IAudioPlayer : controla reprodução
IAudioPlayer <|.. MacAudioPlayer : implementa

MainPage --> WavFileReader : solicita leitura
WavFileReader --> AudioSampleBuffer : escreve amostras

MainPage --> WaveformRenderer : solicita renderização
WaveformRenderer --> AudioSampleBuffer : consome snapshot

@enduml